# orchestrator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  phase-2b-integration.yaml
.github/workflows/: ci.yml  docker.yml  npm-publish.yml  release.yml
benchmarks/output/: latest_results.json  summary.md
benchmarks/output/raw/: context_template_rendering_20251202_013922.json  evaluation_feedback_loop_20251202_013922.json  multi_model_routing_20251202_013922.json  parallel_step_coordination_20251202_013922.json  workflow_dag_construction_20251202_013922.json  workflow_validation_20251202_013922.json
crates/llm-orchestrator-audit/: Cargo.toml  IMPLEMENTATION_REPORT.md  INTEGRATION.md  README.md
crates/llm-orchestrator-audit/migrations/: 001_initial_schema.sql  002_cleanup_function.sql
crates/llm-orchestrator-audit/src/: database.rs  file.rs  lib.rs  logger.rs  models.rs  retention.rs  storage.rs
crates/llm-orchestrator-auth/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md
crates/llm-orchestrator-auth/examples/: api_key_example.rs  full_auth_flow.rs  jwt_auth_example.rs  rbac_example.rs
crates/llm-orchestrator-auth/src/: api_keys.rs  jwt.rs  lib.rs  middleware.rs  models.rs  rbac.rs
crates/llm-orchestrator-benchmarks/: Cargo.toml
crates/llm-orchestrator-benchmarks/src/: lib.rs
crates/llm-orchestrator-benchmarks/src/adapters/: mod.rs  targets.rs
crates/llm-orchestrator-benchmarks/src/benchmarks/: io.rs  markdown.rs  mod.rs  result.rs
crates/llm-orchestrator-cli/: Cargo.toml
crates/llm-orchestrator-cli/src/: main.rs
crates/llm-orchestrator-core/: Cargo.toml
crates/llm-orchestrator-core/src/: context.rs  dag.rs  error.rs  executor.rs  executor_state.rs  health.rs  lib.rs  metrics.rs  providers.rs  retry.rs  workflow.rs
crates/llm-orchestrator-core/src/adapters/: auto_optimizer.rs  connector_hub.rs  data_vault.rs  memory_graph.rs  mod.rs  observatory.rs  router_l2.rs  simulator.rs
crates/llm-orchestrator-core/tests/: integration_test.rs
crates/llm-orchestrator-providers/: Cargo.toml
crates/llm-orchestrator-providers/src/: anthropic.rs  cohere_embeddings.rs  lib.rs  openai.rs  openai_embeddings.rs  pinecone.rs  qdrant.rs  traits.rs  weaviate.rs
crates/llm-orchestrator-sdk/: Cargo.toml
crates/llm-orchestrator-sdk/src/: lib.rs
crates/llm-orchestrator-secrets/: Cargo.toml  README.md
crates/llm-orchestrator-secrets/src/: aws.rs  builder.rs  cache.rs  env.rs  lib.rs  models.rs  traits.rs  vault.rs
crates/llm-orchestrator-secrets/tests/: integration_tests.rs
crates/llm-orchestrator-state/: Cargo.toml  README.md
crates/llm-orchestrator-state/examples/: state_persistence_demo.rs
crates/llm-orchestrator-state/migrations/: 001_initial_schema.sql  002_checkpoints.sql
crates/llm-orchestrator-state/src/: lib.rs  models.rs  postgres.rs  sqlite.rs  tests.rs  traits.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  AUTHENTICATION_IMPLEMENTATION.md  DEPLOYMENT.md  INTEGRATION_GUIDE.md  INTEGRATION_PATTERNS.md  OBSERVABILITY.md  PROJECT_STRUCTURE.md  RAG_PIPELINE_IMPLEMENTATION.md  REQUIREMENTS_ANALYSIS.md  SCHEMA.md  SECRET_IMPLEMENTATION_SUMMARY.md  SECRET_MANAGEMENT.md  VECTOR_DATABASE_GUIDE.md
docs/api/: API_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION_REPORT.md  openapi.yaml  postman_collection.json
docs/disaster_recovery/: DR_IMPLEMENTATION_SUMMARY.md  DR_PROCEDURES.md  DR_RUNBOOK.md  README.md  RECOVERY_METRICS.md
docs/runbooks/: OPERATIONS_CHECKLIST.md  README.md  RUNBOOK_SUMMARY.md  TROUBLESHOOTING.md
docs/runbooks/deployment/: 01-initial-deployment.md  02-rolling-update.md  03-rollback-procedure.md  04-scaling.md  05-multi-region-deployment.md
docs/runbooks/incidents/: 01-high-latency.md  02-service-unavailable.md  03-database-issues.md  04-authentication-failures.md  05-workflow-stuck.md  06-memory-leak.md  07-disk-full.md  08-network-issues.md  09-secret-rotation-failure.md  10-audit-log-gaps.md
docs/runbooks/maintenance/: 01-database-maintenance.md  02-log-rotation.md  03-secret-rotation.md  04-certificate-renewal.md  05-dependency-updates.md  06-backup-verification.md  07-performance-tuning.md  08-capacity-planning.md
docs/runbooks/monitoring/: 01-metrics-guide.md  02-alert-definitions.md  03-dashboard-guide.md  04-log-analysis.md  05-tracing-guide.md
docs/runbooks/security/: 01-security-incident.md  02-user-lockout.md  03-api-key-compromise.md  04-audit-review.md  05-vulnerability-patching.md  06-compliance-audit.md
docs/security/: PENETRATION_TEST_REPORT.md  PENTEST_SUMMARY.md  SECURITY_SCORECARD.md
examples/: content-moderation.yaml  rag-pipeline.yaml  sentiment-analysis.yaml  simple.yaml  transform-only.yaml
helm/: HELM_CHART_IMPLEMENTATION.md  llm-orchestrator-1.0.0.tgz
helm/llm-orchestrator/: .helmignore  Chart.yaml  INSTALL_EXAMPLES.md  README.md  values-development.yaml  values-production.yaml  values.yaml
helm/llm-orchestrator/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
npm/llm-orchestrator/: README.md  package.json
npm/llm-orchestrator-darwin-arm64/: README.md  package.json
npm/llm-orchestrator-darwin-x64/: README.md  package.json
npm/llm-orchestrator-linux-arm64/: README.md  package.json
npm/llm-orchestrator-linux-x64/: README.md  package.json
plans/: LLM-Orchestrator-Plan.md  Phase-4-Optional-Enhancements-SPARC.md  Production-Readiness-Plan.md  SwarmLead-Coordination-Strategy.md
scripts/: publish-all-crates.sh  publish-remaining-crates.sh  run-pentest.sh
scripts/backup/: backup.sh  restore.sh  schedule_backups.sh  verify_backup.sh
tests/: disaster_recovery_tests.rs  security_pentest.rs
tests/disaster_recovery/: application_crash.rs  backup_restore.rs  common.rs  data_corruption.rs  database_failure.rs  failover.rs  mod.rs  network_partition.rs
tests/security/: mod.rs
tests/security/pentest/: README.md  auth_bypass.rs  (+5 more)
(+10 files in other folders)
