[package]
name = "llm-orchestrator-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Tamper-proof audit logging system for LLM workflows with hash chain integrity"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"], optional = true }

# Hashing for tamper-proof logging
sha2 = "0.10"
hex = "0.4"

# File I/O
serde_path_to_error = "0.1"

# Concurrency
parking_lot = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3.12"

[features]
default = ["database"]
database = ["sqlx"]
