[package]
name = "llm-orchestrator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "Core workflow orchestration engine for LLM pipelines"

[dependencies]
# Local crates
llm-orchestrator-providers = { version = "0.1.1", path = "../llm-orchestrator-providers" }
llm-orchestrator-state = { version = "0.1.1", path = "../llm-orchestrator-state", optional = true }

# Workspace dependencies
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
petgraph = { workspace = true }
handlebars = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }

# Observability dependencies
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"
reqwest = { workspace = true }

# =============================================================================
# Phase 2B: Upstream Module Dependencies (Runtime Integration)
# =============================================================================
# These are thin adapter integrations - actual upstream crates are declared
# at the workspace level. The adapters use workspace-level chrono for timestamps.

# LLM-Infra core infrastructure (optional, feature-gated)
llm-infra = { workspace = true, optional = true }
llm-infra-client = { workspace = true, optional = true }

# Upstream module dependencies (optional, feature-gated)
llm-memory-graph = { workspace = true, optional = true }
llm-connector-hub = { workspace = true, optional = true }
llm-data-vault = { workspace = true, optional = true }
llm-simulator = { workspace = true, optional = true }
llm-router-l2 = { workspace = true, optional = true }
llm-optimizer = { workspace = true, optional = true }
llm-observatory-core = { workspace = true, optional = true }

[features]
default = []
state-persistence = ["llm-orchestrator-state"]

# =============================================================================
# Phase 2B: LLM-Infra Core Infrastructure Features
# =============================================================================
# Enable consumption of LLM-Infra modules for shared infrastructure utilities.

# Core Infra integration (enables all Infra utilities)
infra = ["llm-infra", "llm-infra-client"]

# Individual Infra feature consumption
infra-config = ["llm-infra"]
infra-logging = ["llm-infra"]
infra-tracing = ["llm-infra"]
infra-error = ["llm-infra"]
infra-cache = ["llm-infra"]
infra-retry = ["llm-infra"]
infra-rate-limit = ["llm-infra"]
infra-circuit-breaker = ["llm-infra"]

# LLM Client abstractions
infra-llm-routing = ["llm-infra-client"]
infra-llm-execution = ["llm-infra-client"]
infra-llm-evaluation = ["llm-infra-client"]

# =============================================================================
# Phase 2A/2B: Upstream Module Adapter Features
# =============================================================================
# Feature flags for optional upstream integrations via thin adapters.

memory-graph = ["llm-memory-graph"]
connector-hub = ["llm-connector-hub"]
data-vault = ["llm-data-vault"]
simulator = ["llm-simulator"]
router-l2 = ["llm-router-l2"]
auto-optimizer = ["llm-optimizer"]
observatory = ["llm-observatory-core"]

# Enable all upstream integrations
all-adapters = ["memory-graph", "connector-hub", "data-vault", "simulator", "router-l2", "auto-optimizer", "observatory"]

# Enable all Infra + all adapters (full Phase 2B integration)
full-integration = ["infra", "all-adapters"]

[dev-dependencies]
tokio-test = { workspace = true }
mockito = { workspace = true }
